:wrench: Update dependency for cipher