@@ -1,14 +1,12 @@
 package moe.leer.lightblogjava.util;
 
-import sun.misc.BASE64Decoder;
-import sun.misc.BASE64Encoder;
+import org.apache.commons.codec.binary.Hex;
 
 import javax.crypto.Mac;
 import javax.crypto.spec.SecretKeySpec;
-import javax.xml.bind.DatatypeConverter;
-import java.io.IOException;
 import java.security.InvalidKeyException;
 import java.security.NoSuchAlgorithmException;
+import java.util.Base64;
 
 /**
  * @author leer
@@ -30,7 +28,7 @@ public class CipherUtil {
 
       byte[] hash = hasher.doFinal("".getBytes()); // EMPTY DATA
       // to lowercase hexits
-      return DatatypeConverter.printHexBinary(hash).toLowerCase();
+      return Hex.encodeHexString(hash).toLowerCase();
       // to base64
       //return DatatypeConverter.printBase64Binary(hash);
     } catch (NoSuchAlgorithmException | InvalidKeyException ignored) {
@@ -39,16 +37,11 @@ public class CipherUtil {
   }
 
   public static String encryptBase64(String data) {
-    return (new BASE64Encoder()).encodeBuffer(data.getBytes());
+    return new String(Base64.getEncoder().encode(data.getBytes()));
   }
 
   public static String decryptBase64(String key) {
-    try {
-      return new String((new BASE64Decoder()).decodeBuffer(key));
-    } catch (IOException e) {
-      e.printStackTrace();
-    }
-    return null;
+    return new String(Base64.getDecoder().decode(key));
   }
 
 }
